--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,15 +6,15 @@
        additional functionality it is fine to subclass or reimplement
        FlutterApplication and put your custom class here. -->
   <application
-    android:name="io.flutter.app.FlutterApplication"
+    android:icon="@mipmap/ic_launcher"
     android:label="azkar"
-    android:icon="@mipmap/ic_launcher">
+    android:name="io.flutter.app.FlutterApplication">
     <activity
-      android:name=".MainActivity"
-      android:launchMode="singleTop"
-      android:theme="@style/LaunchTheme"
       android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
       android:hardwareAccelerated="true"
+      android:launchMode="singleTop"
+      android:name=".MainActivity"
+      android:theme="@style/LaunchTheme"
       android:windowSoftInputMode="adjustResize">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
@@ -23,22 +23,14 @@
     </activity>
     <!-- Don't delete the meta-data below.
          This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
-    <meta-data
-      android:name="flutterEmbedding"
-      android:value="2" />
-
-    <meta-data
-      android:name="com.facebook.sdk.ApplicationId"
-      android:value="@string/facebook_app_id" />
-
     <activity
-      android:name="com.facebook.FacebookActivity"
       android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
-      android:label="@string/app_name" />
+      android:label="@string/app_name"
+      android:name="com.facebook.FacebookActivity" />
 
     <activity
-      android:name="com.facebook.CustomTabActivity"
-      android:exported="true">
+      android:exported="true"
+      android:name="com.facebook.CustomTabActivity">
       <intent-filter>
         <action android:name="android.intent.action.VIEW" />
 
@@ -48,5 +40,13 @@
         <data android:scheme="@string/fb_login_protocol_scheme" />
       </intent-filter>
     </activity>
+
+    <meta-data
+      android:name="flutterEmbedding"
+      android:value="2" />
+
+    <meta-data
+      android:name="com.facebook.sdk.ApplicationId"
+      android:value="@string/facebook_app_id" />
   </application>
 </manifest>
