--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   flutter_auth_buttons: ^0.8.0
   flutter_login: ^1.0.14
   flutter_secure_storage: ^3.3.3
+  flare_flutter: ^2.0.3
+  fluttertoast: ^7.0.4
 
 dev_dependencies:
   flutter_test:
@@ -47,6 +49,8 @@ flutter:
 
   assets:
     - assets/images/mountains.jpg
+    - assets/images/otp.flr
+    - assets/images/verify.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
