--- a/.github/workflows/Android-CB.yml
+++ b/.github/workflows/Android-CB.yml
@@ -33,9 +33,17 @@ jobs:
     # Check for any formatting issues in the code.
     - run: flutter format --set-exit-if-changed .
     
-    # Statically analyze the Dart code for any errors.
-    - run: flutter analyze .
+#     Statically analyze the Dart code for any errors.
+#     - run: flutter analyze .
     
     # Run widget tests for our flutter project.
     - run: flutter test
-  
+
+#     Build apk.
+#     - run: flutter build apk
+    
+#     Upload generated apk to the artifacts.
+#     - uses: actions/upload-artifact@v1
+#       with:
+#         name: release-apk
+#         path: build/app/outputs/apk/release/app-release.apk  
