--- a/.github/workflows/iOS-CB.yml
+++ b/.github/workflows/iOS-CB.yml
@@ -18,7 +18,7 @@ jobs:
         java-version: '12.x'
     - uses: subosito/flutter-action@v1
       with:
-        flutter-version: '1.22.4'
+        channel: 'stable'
     - run: flutter pub get
     - run: flutter format --set-exit-if-changed .
 #     - run: flutter analyze .
