Fix flutter analyze (#47)
* Fix flutter analyze problems

* Format

* Update android workflow

* Update android workflow

* Update android workflow

* Update iOS workflow

--- a/.github/workflows/iOS-CB.yml
+++ b/.github/workflows/iOS-CB.yml
@@ -18,10 +18,11 @@ jobs:
         java-version: '12.x'
     - uses: subosito/flutter-action@v1
       with:
-        channel: 'stable'
+        channel: 'beta'
+    - run: flutter upgrade
     - run: flutter pub get
     - run: flutter format --set-exit-if-changed .
-#     - run: flutter analyze .
+    - run: flutter analyze .
     - run: flutter test
 #     - run: flutter build apk
 #     - run: flutter build ios --release --no-codesign
