--- a/.github/workflows/Android-CB.yml
+++ b/.github/workflows/Android-CB.yml
@@ -18,11 +18,12 @@ jobs:
     
     - uses: subosito/flutter-action@v1
       with:
-        channel: 'stable' # 'dev', 'alpha', default to: 'stable'
+        channel: 'beta' # 'dev', 'alpha', default to: 'stable'
     
+    - run: flutter upgrade
     - run: flutter pub get
     - run: flutter format --set-exit-if-changed .
-#     - run: flutter analyze .
+    - run: flutter analyze .
     - run: flutter test
 #     - run: flutter build apk
 #     - uses: actions/upload-artifact@v1
