--- a/.github/workflows/Android-CB.yml
+++ b/.github/workflows/Android-CB.yml
@@ -17,9 +17,10 @@ jobs:
     
     - uses: subosito/flutter-action@v1
       with:
+        flutter-version:  '2.2.0'
         channel: 'beta' # 'dev', 'alpha', default to: 'stable'
     
-    - run: flutter upgrade
+        # - run: flutter upgrade
     - run: flutter pub get
     - run: flutter format --set-exit-if-changed .
     - run: flutter analyze .
