--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   sprintf: "^4.0.0"
   flutter_localizations:
     sdk: flutter
+  firebase_core: "^0.7.0"
+  firebase_messaging: "^8.0.0-dev.15"
 
 dev_dependencies:
   flutter_test:
