Implement firebase notifications receiver

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,8 @@ dependencies:
   sprintf: "^4.0.0"
   flutter_localizations:
     sdk: flutter
-  firebase_core: "^0.7.0"
-  firebase_messaging: "^8.0.0-dev.15"
+  firebase_core: ^1.0.3
+  firebase_messaging: ^9.1.1
 
 dev_dependencies:
   flutter_test:
