--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ ios/GoogleService-Info.plist
 .dart_tool
  android/app/google-services.json
 ios/GoogleService-Info.plist
+android/key.properties
+android/app/androidkey.jks
