--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -83,3 +83,9 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 }
+
+rootProject.ext {
+    set('FlutterFire', [
+            FirebaseSDKVersion: '26.3.0'
+    ])
+}
