--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
     sdk: flutter
   firebase_core: ^1.0.4
   firebase_messaging: ^9.1.1
+  shared_preferences: ^2.0.5
+  optional: ^5.0.0+1
 
 dev_dependencies:
   flutter_test:
