--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_messaging: ^9.1.1
   shared_preferences: ^2.0.5
   optional: ^5.0.0+1
+  flutter_statusbarcolor: ^0.2.3
 
 dev_dependencies:
   flutter_test:
