--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_statusbarcolor: ^0.2.3
   confetti: ^0.5.5
   flutter_slidable: ^0.6.0
+  feature_discovery: ^0.14.0
 
 dev_dependencies:
   flutter_test:
