New friends screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_slidable: ^0.6.0
   feature_discovery: ^0.14.0
   share_plus: ^2.1.2
+  toggle_switch: ^0.1.9
 
 dev_dependencies:
   flutter_test:
