Add onboarding pages

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ description: A new Flutter project.
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.2.0+48
+version: 1.2.2+49
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
@@ -43,6 +43,7 @@ dependencies:
   feature_discovery: ^0.14.0
   share_plus: ^2.1.2
   toggle_switch: ^0.1.9
+  introduction_screen: ^2.1.0
 
 dev_dependencies:
   flutter_test:
@@ -68,6 +69,11 @@ flutter:
     - assets/images/verify.png
     - assets/images/icon.png
     - assets/images/logo.png
+    - assets/images/username.png
+    - assets/images/add_friend.png
+    - assets/images/add_facebook_friend.png
+    - assets/images/challenge.png
+    - assets/images/friends.png
     - assets/servercert.crt
   # To add assets to your application, add an assets section, like this:
   # assets:
