--- a/.github/workflows/Android-CB.yml
+++ b/.github/workflows/Android-CB.yml
@@ -24,7 +24,7 @@ jobs:
     - run: flutter pub get
     - run: flutter format --set-exit-if-changed .
     - run: flutter analyze .
-#     - run: flutter test
+    - run: flutter test
 #     - run: flutter build apk
 #     - uses: actions/upload-artifact@v1
 #       with:
