Ask Android users to review the app

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   share_plus: ^2.1.2
   toggle_switch: ^0.1.9
   introduction_screen: ^2.1.0
+  in_app_review: ^2.0.2
 
 dev_dependencies:
   flutter_test:
