--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   toggle_switch: ^0.1.9
   introduction_screen: ^2.1.0
   in_app_review: ^2.0.2
+  shimmer: ^2.0.0
 
 dev_dependencies:
   flutter_test:
