Fix release check

--- a/.github/workflows/Release Check #1.yml
+++ b/.github/workflows/Release Check #1.yml
@@ -14,5 +14,5 @@ jobs:
 
       - run: |
           found=($(grep "^apply plugin: 'com.google.gms.google-services'" android/app/build.gradle | wc -l))
-          [ found -eq "1" ] || exit 1
+          [ found == 1 ] || exit 1
           exit 0
