--- a/.github/workflows/Release Check #1.yml
+++ b/.github/workflows/Release Check #1.yml
@@ -14,6 +14,8 @@ jobs:
 
       - run: |
           ls
+          cat android/app/build.gradle
           found=($(grep "^apply plugin: 'com.google.gms.google-services'" android/app/build.gradle | wc -l))
+          echo $found
           [ found == 1 ] || exit 1
           exit 0
