--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -52,5 +52,16 @@
     <meta-data
       android:name="com.facebook.sdk.ApplicationId"
       android:value="@string/facebook_app_id" />
+
+<!--    <provider-->
+<!--        android:name="com.pichillilorenzo.flutter_inappwebview.InAppWebViewFileProvider"-->
+<!--        android:authorities="${applicationId}.flutter_inappwebview.fileprovider"-->
+<!--        android:exported="false"-->
+<!--        android:grantUriPermissions="true">-->
+<!--      <meta-data-->
+<!--          android:name="android.support.FILE_PROVIDER_PATHS"-->
+<!--          android:resource="@xml/provider_paths" />-->
+<!--    </provider>-->
+<!--    -->
   </application>
 </manifest>
