--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ description: A new Flutter project.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 
-version: 1.4.1+67
+version: 1.5.0+70
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
@@ -48,6 +48,7 @@ dependencies:
   in_app_review: ^2.0.2
   crisp: ^0.1.8
   crypto: ^3.0.1
+  shimmer: ^2.0.0
 
 dev_dependencies:
   flutter_test:
