--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ description: A new Flutter project.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 
-version: 1.7.0+80
+version: 1.8.1+81
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
@@ -49,6 +49,7 @@ dependencies:
   crisp: ^0.1.8
   crypto: ^3.0.1
   shimmer: ^2.0.0
+  flutter_ringtone_player: ^3.0.0
 
 dev_dependencies:
   flutter_test:
