--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   crypto: ^3.0.1
   shimmer: ^2.0.0
   flutter_ringtone_player: ^3.0.0
+  auto_size_text: ^2.1.0
 
 dev_dependencies:
   flutter_test:
