--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   shimmer: ^2.0.0
   flutter_ringtone_player: ^3.0.0
   auto_size_text: ^2.1.0
+  clear_all_notifications: ^0.0.2
 
 dev_dependencies:
   flutter_test:
