--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,10 @@ dependencies:
   flutter_ringtone_player: ^3.0.0
   auto_size_text: ^2.1.0
   clear_all_notifications: ^0.0.2
+  google_sign_in: ^5.1.1
+  firebase_auth: ^3.1.2
+  googleapis: ^5.0.1
+  flutter_signin_button: ^2.0.0
 
 dev_dependencies:
   flutter_test:
