--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ description: A new Flutter project.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 
-version: 1.9.3+102
+version: 1.9.5+102
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
@@ -56,6 +56,7 @@ dependencies:
   firebase_auth: ^3.1.2
   googleapis: ^5.0.1
   flutter_signin_button: ^2.0.0
+  flutter_local_notifications: ^9.0.0
 
 dev_dependencies:
   flutter_test:
