--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ description: A new Flutter project.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 
-version: 1.9.5+105
+version: 1.10.0+106
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
@@ -88,6 +88,7 @@ flutter:
     - assets/images/challenge.png
     - assets/images/friends.png
     - assets/servercert.crt
+    - assets/quran.txt
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
