--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
        FlutterApplication and put your custom class here. -->
   <uses-permission android:name="android.permission.INTERNET"/>
   <application
-    android:icon="@mipmap/tanafaso"
+    android:icon="@mipmap/ic_launcher"
     android:label="تنافسوا"
     android:name="io.flutter.app.FlutterApplication">
     <activity
