Fix Juz range picker

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   googleapis: ^5.0.1
   flutter_signin_button: ^2.0.0
   flutter_local_notifications: ^9.0.0
+  numberpicker: ^2.1.1
 
 dev_dependencies:
   flutter_test:
