[iOS] Support signing with Apple/Facebook/Google

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -49,6 +49,17 @@
 		<key>NSAllowsLocalNetworking</key>
 		<true/>
 	</dict>
+	<key>CFBundleURLTypes</key>
+    <array>
+    	<dict>
+    		<key>CFBundleTypeRole</key>
+    		<string>Editor</string>
+    		<key>CFBundleURLSchemes</key>
+    		<array>
+    			<string>com.googleusercontent.apps.912447486628-5sgarm8jg42hcms3f3t63dustap4lvft</string>
+    		</array>
+    	</dict>
+    </array>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>fetch</string>
