--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ ios/GoogleService-Info.plist
 .dart_tool
  android/app/google-services.json
 ios/GoogleService-Info.plist
+ios/Runner/GoogleService-Info.plist
 android/key.properties
 android/app/androidkey.jks
 azkar/
