--- a/.github/workflows/Android CB.yml
+++ b/.github/workflows/Android CB.yml
@@ -1,4 +1,4 @@
-name: Android Continuous Build and Test
+name: Code Formatter and Analayzer
 
 on:
   pull_request:
@@ -10,24 +10,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    
-    - uses: actions/checkout@v1
-    - uses: actions/setup-java@v1
-      with:
-        java-version: '12.x'
-    
     - uses: subosito/flutter-action@v1
       with:
-        flutter-version:  '2.2.0'
-        channel: 'beta' # 'dev', 'alpha', default to: 'stable'
+        flutter-version:  '2.5.3'
+        channel: 'stable'
     
-        # - run: flutter upgrade
     - run: flutter pub get
     - run: flutter format --set-exit-if-changed .
     - run: flutter analyze .
-#    - run: flutter test
-#     - run: flutter build apk
-#     - uses: actions/upload-artifact@v1
-#       with:
-#         name: release-apk
-#         path: build/app/outputs/apk/release/app-release.apk  
