--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -126,3 +126,26 @@ flutter:
     - family: icomoon
       fonts:
         - asset: assets/fonts/IcoMoon.ttf
+    - family: arabic
+      fonts:
+        - asset: assets/fonts/arabic-Regular.ttf
+        - asset: assets/fonts/arabic-Bold.ttf
+        - asset: assets/fonts/arabic-Medium.ttf
+        - asset: assets/fonts/arabic-SemiBold.ttf
+        - asset: assets/fonts/arabic-VariableFont_wght.ttf
+    - family: roboto
+      fonts:
+        - asset: assets/fonts/roboto-Black.ttf
+        - asset: assets/fonts/roboto-BlackItalic.ttf
+        - asset: assets/fonts/roboto-Bold.ttf
+        - asset: assets/fonts/roboto-BoldItalic.ttf
+        - asset: assets/fonts/roboto-Italic.ttf
+        - asset: assets/fonts/roboto-Light.ttf
+        - asset: assets/fonts/roboto-LightItalic.ttf
+        - asset: assets/fonts/roboto-Medium.ttf
+        - asset: assets/fonts/roboto-MediumItalic.ttf
+        - asset: assets/fonts/roboto-Regular.ttf
+        - asset: assets/fonts/roboto-Thin.ttf
+    - family: uthmanic
+      fonts:
+        - asset: assets/fonts/uthmanic.otf
