Run notifications disabled check for new pull requests

--- a/.github/workflows/Notifications Disabled Check.yml
+++ b/.github/workflows/Notifications Disabled Check.yml
@@ -1,6 +1,7 @@
 name: Notifications Disabled (for ease of open source contributions)
 
 on:
+  pull_request:
   push:
       branches:
         - master
