Ignore matches starting from root directory

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,20 @@
-.idea
-.vscode
-.packages
-.pub
-build
-ios/.generated
-.packages
-.android/.idea
-android/app/google-services.json
-ios/GoogleService-Info.plist
-.flutter-plugins-dependencies
-.flutter-plugins
-.DS_Store
-.dart_tool
- android/app/google-services.json
-ios/GoogleService-Info.plist
-ios/Runner/GoogleService-Info.plist
-android/key.properties
-android/app/androidkey.jks
-azkar/
+/.idea
+/.vscode
+/.packages
+/.pub
+/build
+/ios/.generated
+/.packages
+/.android/.idea
+/android/app/google-services.json
+/ios/GoogleService-Info.plist
+/.flutter-plugins-dependencies
+/.flutter-plugins
+/.DS_Store
+/.dart_tool
+/android/app/google-services.json
+/ios/GoogleService-Info.plist
+/ios/Runner/GoogleService-Info.plist
+/android/key.properties
+/android/app/androidkey.jks
+/azkar/
