--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -22,7 +22,7 @@ if (flutterVersionName == null) {
 }
 
 apply plugin: 'com.android.application'
-//apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.google.gms.google-services'
 apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
@@ -46,7 +46,7 @@ android {
 
     defaultConfig {
         applicationId "com.tanafaso.azkar"
-        minSdkVersion 18
+        minSdkVersion 19
         targetSdkVersion 31
         multiDexEnabled true
         versionCode flutterVersionCode.toInteger()
