--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ description: A new Flutter project.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 
-version: 1.11.2+115
+version: 1.11.3+118
 
 environment:
   sdk: '>=2.10.0 <3.0.0'
@@ -24,7 +24,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  flutter_facebook_login: ^3.0.0
+  flutter_login_facebook: ^1.4.1
   http: ^0.13.1
   flutter_auth_buttons: ^0.8.0
   flutter_login: ^1.0.14
@@ -34,18 +34,17 @@ dependencies:
   sprintf: "^4.0.0"
   flutter_localizations:
     sdk: flutter
-  firebase_core: ^1.0.4
-  firebase_messaging: ^9.1.1
+  firebase_core: ^1.15.0
+  firebase_messaging: ^11.2.15
   shared_preferences: ^2.0.5
   optional: ^5.0.0+1
-  flutter_statusbarcolor: ^0.2.3
   confetti: ^0.5.5
   flutter_slidable: ^0.6.0
   feature_discovery: ^0.14.0
   share_plus: ^4.0.4
   toggle_switch: ^0.1.9
   introduction_screen: ^2.1.0
-  in_app_review: ^2.0.2
+  in_app_review: ^2.0.4
   crisp: ^0.1.8
   crypto: ^3.0.1
   shimmer: ^2.0.0
