Fix android update freeze

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -13,6 +13,8 @@
   <application
     android:icon="@mipmap/ic_launcher"
     android:label="تنافسوا"
+    android:allowBackup="false"
+    android:fullBackupContent="false"
     android:name="${applicationName}">
 
     <activity
