--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -66,6 +66,9 @@ android {
     buildTypes {
         release {
             signingConfig signingConfigs.release
+            minifyEnabled false
+            useProguard false
+            shrinkResources false
         }
         debug {
             signingConfig signingConfigs.debug
