--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -86,11 +86,13 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:19.2.0'
     implementation 'com.google.guava:listenablefuture:9999.0-empty-to-avoid-conflict-with-guava'
     implementation 'com.facebook.android:facebook-login:9.1.0'
+    implementation 'androidx.work:work-runtime-ktx:2.7.1'
     def multidex_version = "2.0.1"
     implementation "androidx.multidex:multidex:$multidex_version"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    implementation 'com.google.firebase:firebase-messaging:23.0.0'
 }
 
 rootProject.ext {
