--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ description: A new Flutter project.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 
-version: 1.13.3+127
+version: 1.13.4+128
 
 environment:
   sdk: '>=2.10.0 <3.0.0'
@@ -28,7 +28,7 @@ dependencies:
   http: ^0.13.1
   flutter_auth_buttons: ^0.8.0
   flutter_login: ^1.0.14
-  flutter_secure_storage: ^3.3.3
+  flutter_secure_storage: ^5.1.0
   flare_flutter: ^2.0.3
   progress_state_button: ^1.0.1
   sprintf: "^4.0.0"
@@ -62,6 +62,14 @@ dependencies:
   url_launcher: ^6.1.0
   synchronized: ^3.0.0+2
   firebase_analytics: ^9.3.0
+  intl: ^0.17.0
+  odometer: ^3.0.0
+
+dependency_overrides:
+  flutter_inappwebview:
+    git:
+      url: https://github.com/tanafaso/flutter_inappwebview
+      ref: master
 
 dev_dependencies:
   flutter_test:
