--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   firebase_analytics: ^9.3.0
   intl: ^0.17.0
   odometer: ^3.0.0
+  permission_handler: ^10.0.0
 
 dependency_overrides:
   flutter_inappwebview:
