[Memorization] Allow users to specify Surahs range

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ description: A new Flutter project.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 
-version: 1.14.0+137
+version: 1.14.1+138
 
 environment:
   sdk: '>=2.10.0 <3.0.0'
@@ -102,8 +102,7 @@ flutter:
     - assets/images/add_facebook_friend.png
     - assets/images/challenge.png
     - assets/images/friends.png
-    - assets/servercert.crt
-    - assets/servercert-2022.crt
+    - assets/gts-root-r1.crt
     - assets/quran.txt
   # To add assets to your application, add an assets section, like this:
   # assets:
